manifests/user/overlays/prod/ingress.yaml
# prod 전용 ALB Ingress (dev엔 없음)
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: taskfarm-user
  labels:
    app: taskfarm-user
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    # TODO: ACM 인증서 ARN
    # alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:...
spec:
  ingressClassName: alb
  rules:
    - host: taskfarm.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: taskfarm-user
                port:
                  number: 80
